// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductQuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity-_r_0_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for Classic T-Shirt"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for Classic T-Shirt"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      id="quantity-_r_0_"
      min="1"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for Classic T-Shirt"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > IncrementPastStock story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity-_r_1_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for Limited Run Tee"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for Limited Run Tee"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      id="quantity-_r_1_"
      min="1"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for Limited Run Tee"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > LowStockWarning story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity-_r_3_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for Limited Edition Jacket"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for Limited Edition Jacket"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
    >
      −
    </button>
    <input
      aria-describedby="quantity-_r_3_-inventory-msg"
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      id="quantity-_r_3_"
      min="1"
      step="1"
      type="number"
      value="5"
    />
    <button
      aria-label="Increment Quantity for Limited Edition Jacket"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm leading-none text-left text-destructive font-medium"
    id="quantity-_r_3_-inventory-msg"
    role="alert"
  >
    Only 3 left!
  </p>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity-_r_2_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for Sold Out Product"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for Sold Out Product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      aria-describedby="quantity-_r_2_-inventory-msg"
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      disabled=""
      id="quantity-_r_2_"
      min="1"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for Sold Out Product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
      disabled=""
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm leading-none text-left text-destructive font-medium"
    id="quantity-_r_2_-inventory-msg"
    role="alert"
  >
    Out of stock for Sold Out Product
  </p>
</div>
`;
